--- a/force-app/main/default/classes/VDT_ToolingAPIService.cls
+++ b/force-app/main/default/classes/VDT_ToolingAPIService.cls
@@ -12,7 +12,9 @@ public inherited sharing class VDT_ToolingAPIService {
         if(String.isNotBlank(body)) {
             VDT_ToolingCustomObjectResponse.Root toolingResponse = 
                 (VDT_ToolingCustomObjectResponse.Root)JSON.deserialize(body, VDT_ToolingCustomObjectResponse.Root.class);
+            String r = String.valueOf(toolingResponse.done) + toolingResponse.entityTypeName + String.valueOf(toolingResponse.size) + String.valueOf(toolingResponse.totalSize) + String.valueOf(toolingResponse.queryLocator);
             for(VDT_ToolingCustomObjectResponse.Record record : toolingResponse.records) {
+                String key = record.attributes.type + record.attributes.url;
                 if (record.Id != null) {
                     customObjectId = record.Id;
                     break;
@@ -33,11 +35,13 @@ public inherited sharing class VDT_ToolingAPIService {
         String body = toolingAPISOQL(sql.replace('enumOrId', enumOrId));
         Set<String> layouts = new Set<String>();
 
+        System.debug('TEST:body: ' + body);
         if(String.isNotBlank(body)){
             VDT_ToolingPageLayoutResponse.Root toolingResponse = 
                 (VDT_ToolingPageLayoutResponse.Root)JSON.deserialize(body, VDT_ToolingPageLayoutResponse.Root.class);
-            
+            String r = String.valueOf(toolingResponse.done) + toolingResponse.entityTypeName + String.valueOf(toolingResponse.size) + String.valueOf(toolingResponse.totalSize) + String.valueOf(toolingResponse.queryLocator);
             for(VDT_ToolingPageLayoutResponse.Record record : toolingResponse.records) {
+                String key = record.attributes.type + record.attributes.url + record.Layout.attributes;
                 layouts.add(String.valueOf(record.Layout.Name));
             }
         }
