--- a/force-app/main/default/classes/VDT_MasterAnalysisCalculationBuilder.cls
+++ b/force-app/main/default/classes/VDT_MasterAnalysisCalculationBuilder.cls
@@ -100,8 +100,8 @@ public with sharing class VDT_MasterAnalysisCalculationBuilder {
                 this.updateKpiForCountry(ONEKEY_WITHOUT_VISIT_KPI_ID, country, hasVisits ? 0 : 1, 1);
                 Boolean hasCyclePlanTargets = this.cyclePlanTargetsByAccount.containsKey(acc.Id) && this.cyclePlanTargetsByAccount.get(acc.id) > 0;
                 this.updateKpiForCountry(ONEKEY_WITHOUT_CYCLE_PLAN_KPI_ID, country, hasCyclePlanTargets ? 0 : 1, 1);
-                Boolean hasNoVisitNorTargets = !hasVisits && !hasCyclePlanTargets;
-                this.updateKpiForCountry(ONEKEY_WITHOUT_VISIT_AND_CYCLE_PLAN_KPI_ID, country, hasNoVisitNorTargets ? 1 : 0, 1);
+                Boolean hasVisitButNotTargets = hasVisits && !hasCyclePlanTargets;
+                this.updateKpiForCountry(ONEKEY_WITHOUT_VISIT_AND_CYCLE_PLAN_KPI_ID, country, hasVisitButNotTargets ? 1 : 0, 1);
                 Boolean hasRatings = this.metricsByAccount.containsKey(acc.Id) && this.metricsByAccount.get(acc.Id) > 0;
                 this.updateKpiForCountry(ONEKEY_WITHOUT_RATINGS_KPI_ID, country, hasRatings ? 0 : 1, 1);
                 Integer territory = this.accountsWithTerritories.contains(acc.Id) ? 1 : 0;
